--- a/src/partials/newTournament/tourForm.html
+++ b/src/partials/newTournament/tourForm.html
@@ -58,7 +58,7 @@
 <div class="form-group row">
 	<label class="form-control-label col-sm-2" for="division">Kategorie:</label> <!-- select -->
 	<div class="col-sm-8">
-		<select class="form-control" id="division" name="division" ng-model="tour.division" required 
+		<select class="form-control" id="division" name="division" ng-model="tour.divisionId" required 
 			ng-options="obj.id as obj.division for obj in divisions">
 			<option value="">Vyberte kategorii</option>
 		</select>
