--- a/src/partials/admin.html
+++ b/src/partials/admin.html
@@ -1,11 +1,11 @@
 <div class="container" ng-controller="Admin">
 
 	<ul class="nav nav-tabs">
-		<li ng-repeat="tab in tabs" ng-class="{active:isActiveTab(tab.url)}" ng-click="onClickTab(tab)">
-			<a>{{tab.title}}</a>
+		<li ng-repeat="tab in tabs" ng-class="{active:isActiveTab(tab.tab)}">
+			<a href="{{getHref(tab.tab)}}">{{tab.title}}</a>
 		</li>
 	</ul>
 
-	<div class="tabPage" ng-include="currentTab"></div>
+	<div class="tabPage" ng-include="getTabFileUrl()"></div>
 
 </div>
