--- a/src/partials/admin/clubs.html
+++ b/src/partials/admin/clubs.html
@@ -1,14 +1,52 @@
 <div class="container" ng-controller="Clubs">
 	
+	<div ng-show="actionFile">
+		<button class="btn btn-primary" ng-click="list()">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Zpět
+		</button>
+		<div class="margin-top-20" ng-include="actionFile"></div>
+	</div>
 
-	<div ng-show="creatingNew" ng-include="getFullTabUrl('newClub.html')"></div>
-
-	<div ng-hide="creatingNew">
-		<button class="btn btn-secondary" ng-click="creatingNew = true">Přidat tým/klub</button>
+	<div ng-hide="actionFile">
+		<div class="row">
+			<div class="col-sm-9">
+				<h1>Seznam klubů</h1>
+			</div>
+			<div class="col-sm-3 text-right">
+				<button class="btn btn-primary" ng-click="create()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Přidat klub</button>
+			</div>
+		</div>
 		
-		<h1>Seznam týmů</h1>
-		<div ng-repeat="club in clubs">
-			
+		<div class="table-responsive">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Název</th>
+						<th>Město</th>
+						<th>Země</th>
+						<th>Úpravy</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="club in clubs">
+						<td>{{ club.id }}</td>
+						<td>{{ club.name }}</td>
+						<td>{{ club.city }}</td>
+						<td>{{ club.country }}</td>
+						<td class="col-sm-fix">
+							<div class="btn-group">
+								<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit(club.id)">
+									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+								</button>
+								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(club.id)">
+									<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+								</button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 
 	</div>
