--- a/src/partials/admin/tours.html
+++ b/src/partials/admin/tours.html
@@ -1,14 +1,57 @@
 <div class="container" ng-controller="Tours">
 	
 
-	<div ng-show="creatingNew" ng-include="getFullTabUrl('../newTournament.html')"></div>
+	<div ng-show="actionFile">
+		<button class="btn btn-primary" ng-click="list()">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Zpět
+		</button>
+		<div class="margin-top-20" ng-include="actionFile"></div>
+	</div>
 
-	<div ng-hide="creatingNew">
-		<button class="btn btn-secondary" ng-click="creatingNew = true">Přidat turnaj</button>
-		
-		<h1>Seznam turnajů</h1>
-		<div ng-repeat="tour in tours">
-			
+	<div ng-hide="actionFile">
+		<div class="row">
+			<div class="col-sm-9">
+				<h1>Seznam turnajů</h1>
+			</div>
+			<div class="col-sm-3 text-right">
+				<button class="btn btn-primary" ng-click="create()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Přidat turnaj</button>
+			</div>
+		</div>
+
+		<div class="table-responsive">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Název</th>
+						<th>Od</th>
+						<th>Do</th>
+						<th>Město</th>
+						<th>Země</th>
+						<th>Úpravy</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="tour in tours">
+						<td>{{ tour.id }}</td>
+						<td>{{ tour.name }}</td>
+						<td>{{ tour.startDate | czDateTime }}</td>
+						<td>{{ tour.endDate | czDateTime }}</td>
+						<td>{{ tour.city }}</td>
+						<td>{{ tour.country }}</td>
+						<td class="col-sm-fix">
+							<div class="btn-group">
+								<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit(tour.id)">
+									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+								</button>
+								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(tour.id)">
+									<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+								</button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 
 	</div>
