--- a/src/partials/scoring/onlineScoring.html
+++ b/src/partials/scoring/onlineScoring.html
@@ -11,7 +11,7 @@
 
 		<form novalidate class="form">
 
-			<div class="form-group row">
+			<div class="row">
 				<div class="col-xs-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading text-center">Domácí - {{data.homeTeam.name}}</div>
@@ -42,6 +42,13 @@
 		<!-- <pre>{{scored | json}}</pre>
 		<pre>{{db | json}}</pre>
 		<pre>{{data[scored.team].players | json}}</pre> -->
+
+		<div class="row">
+			<div class="col-sm-4 col-sm-offset-4">
+				<input type="button" class="scoreHistory-btn btn btn-danger btn-lg btn-block" value="Ukončit zápas" 
+				ng-click="matchEnd()">
+			</div>
+		</div>
 
 		<div class="row scoreHistory">
 			<div class="scoreHistory-block col-sm-12 col-md-offset-1 col-md-10">
