--- a/src/partials/admin/clubs.html
+++ b/src/partials/admin/clubs.html
@@ -2,13 +2,13 @@
 	
 	<div ng-show="actionFile">
 		<button class="btn btn-primary" ng-click="list()">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Zpět
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Zpět na seznam klubů
 		</button>
 		<div class="margin-top-20" ng-include="actionFile"></div>
 	</div>
 
 	<div ng-hide="actionFile">
-		<div class="row">
+		<div class="row nav-row">
 			<div class="col-sm-9">
 				<h1>Seznam klubů</h1>
 			</div>
