--- a/src/partials/admin/editClub.html
+++ b/src/partials/admin/editClub.html
@@ -42,4 +42,43 @@
 		</div>
 	</form>
 
+	<div class="row nav-row">
+		<div class="col-sm-9">
+			<h2>Seznam týmů</h2>
+		</div>
+		<div class="col-sm-3 text-right">
+			<button class="btn btn-primary" ng-click="create()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Přidat tým</button>
+		</div>
+	</div>
+	
+	<div class="table-responsive">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Divize</th>
+					<th>Skupina</th>
+					<th>Úpravy</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="team in teams">
+					<td>{{ team.id }}</td>
+					<td>{{ getDivision(team.divisionId) }}</td>
+					<td>{{ team.degree }}</td>
+					<td class="col-sm-fix">
+						<div class="btn-group">
+							<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit(team.id)">
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(team.id)">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</button>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
 </div>
