--- a/src/templates/_messages.html
+++ b/src/templates/_messages.html
@@ -1,2 +1,3 @@
 <div class="text-validate-msg" ng-message="required">Pvinný údaj</div>
 <div class="text-validate-msg" ng-message="email">Údaj neodpovídá tvaru emailu</div>
+<div class="text-validate-msg" ng-message="minlength">Příliš krátké</div>
