--- a/src/partials/admin/clubs.html
+++ b/src/partials/admin/clubs.html
@@ -13,7 +13,9 @@
 				<h1>Seznam klubů</h1>
 			</div>
 			<div class="col-sm-3 text-right">
-				<button class="btn btn-primary" ng-click="create()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Přidat klub</button>
+				<button class="btn btn-primary" ng-click="create()">
+					<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Přidat klub
+				</button>
 			</div>
 		</div>
 		
