--- a/src/templates/_messages.html
+++ b/src/templates/_messages.html
@@ -1,3 +1,8 @@
 <div class="text-validate-msg" ng-message="required">Pvinný údaj</div>
 <div class="text-validate-msg" ng-message="email">Údaj neodpovídá tvaru emailu</div>
 <div class="text-validate-msg" ng-message="minlength">Příliš krátké</div>
+<div class="text-validate-msg" ng-message="maxlength">Příliš dlouhé</div>
+<div class="text-validate-msg" ng-message="number">Zadejte číslo</div>
+<div class="text-validate-msg" ng-message="standing">Zadejte kladné číslo</div>
+<div class="text-validate-msg" ng-message="tba">Vyplňte či zaškrtněte</div>
+<div class="text-validate-msg" ng-message="consequence">Zadejte jednu možnost</div>
