--- a/src/partials/admin/editTour.html
+++ b/src/partials/admin/editTour.html
@@ -62,7 +62,7 @@
 		<div class="form-group row">
 			<div class="col-sm-offset-2 col-sm-10">
 				<input class="btn btn-primary" type="submit" ng-click="edit(edit)" value="Uložit">
-				<input class="btn btn-secondary" type="button" ng-click="reset()" value="Reset">
+				<input class="btn btn-secondary" type="button" ng-click="reset()" value="Obnovit původní údaje">
 			</div>
 		</div>
 
