--- a/src/partials/profile/editUser.html
+++ b/src/partials/profile/editUser.html
@@ -38,9 +38,11 @@
 			</div>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group row">
+			<div class="col-sm-offset-2 col-sm-10">
 			<input type="submit" class="btn btn-primary" ng-click="putUser(editUser)" value="Uložit">
 			<input type="submit" class="btn btn-secondary" ng-click="resetUser()" value="Původní údaje">
+			</div>
 		</div>
 	</form>
 
