--- a/src/partials/admin/clubEdit/players.html
+++ b/src/partials/admin/clubEdit/players.html
@@ -35,7 +35,8 @@
 						<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="clubPlayer.edit.show(player.id)">
 							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 						</button>
-						<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="clubPlayer.delete(player.id)">
+						<button type="button" class="btn btn-danger" aria-label="Smazat" 
+							ng-click="clubPlayer.delete(player.id, player.firstname + ' ' + player.lastname)">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
 					</div>
