--- a/src/partials/admin/clubEdit/teams.html
+++ b/src/partials/admin/clubEdit/teams.html
@@ -31,7 +31,7 @@
 						<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit_team.show(team.id)">
 							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 						</button>
-						<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="deleteTeam(team.id)">
+						<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="deleteTeam(team.id, team.name)">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
 					</div>
