--- a/src/partials/admin/clubs.html
+++ b/src/partials/admin/clubs.html
@@ -41,7 +41,7 @@
 								<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit(club.id)">
 									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 								</button>
-								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(club.id)">
+								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(club.id, club.name)">
 									<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 								</button>
 							</div>
