--- a/src/partials/admin/tours.html
+++ b/src/partials/admin/tours.html
@@ -43,7 +43,7 @@
 								<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="edit(tour.id)">
 									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 								</button>
-								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(tour.id)">
+								<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(tour.id, tour.name)">
 									<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 								</button>
 							</div>
