--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container">
-        <p>Catcher UI &copy; 2016 Jaroslav veselý</p>
+        <p>Catcher UI &copy; 2016 Jaroslav Veselý</p>
     </div>
 </footer>
