--- a/src/partials/scoring/selectMatch.html
+++ b/src/partials/scoring/selectMatch.html
@@ -15,9 +15,12 @@
 		</div>
 
 		<div class="form-group">
-			<input class="btn btn-primary" type="button" ng-click="score()" value="Skórovat" ng-disabled="!selected.match">
-			<button type="button" class="btn btn-primary" 
-			ng-click="" data-toggle="modal" href="#scoreMatch" ng-disabled="!selected.match">Zadat pouze výsledek</button>
+			<button class="btn btn-primary" type="button" 
+				ng-click="score()" ng-disabled="!selected.match">Skórovat
+			</button>
+			<!-- <button type="button" class="btn btn-primary" 
+				ng-click="" data-toggle="modal" href="#scoreMatch" ng-disabled="!selected.match">Zadat pouze výsledek
+			</button> -->
 		</div>
 	</form>
 
