--- a/src/partials/spirit.html
+++ b/src/partials/spirit.html
@@ -10,13 +10,74 @@
 			</select>
 		</div>
 
-		<div class="form-group btn-group" ng-hide="isEmpty(selected.match)">
-			<!-- <input class="form-control" type="number" 
-			ng-disabled="isEmpty(selected.match)" placeholder="Zde napište číselné hodnocení 1 až 10"> -->
-			<button ng-repeat="n in [] | range:10" 
-				type="button" class="btn" ng-class="decider(((n+1)===selected.score), 'btn-info', 'btn-default')" ng-click="select(n+1)">
-				{{n+1}}
-			</button>
+		<div ng-hide="isEmpty(selected.match)">
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="comment">Komentář k SOTG:</label>
+				<div class="col-sm-8">
+					<input class="form-control" id="comment" type="text" placeholder="Komentář k SOTG" 
+					ng-model="editUser.comment" name="comment">
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="rules">Pravidla:</label>
+				<div class="col-sm-8 btn-group">
+					<button ng-repeat="n in [] | range:4" 
+						type="button" class="btn" 
+						ng-class="decider(((n+1)===spirit.rules), 'btn-info', 'btn-default')" 
+						ng-click="select('rules', n+1)">
+						{{n+1}}
+					</button>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="fouls">Fauly:</label>
+				<div class="col-sm-8 btn-group">
+					<button ng-repeat="n in [] | range:4" 
+						type="button" class="btn" 
+						ng-class="decider(((n+1)===spirit.fouls), 'btn-info', 'btn-default')" 
+						ng-click="select('fouls', n+1)">
+						{{n+1}}
+					</button>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="fair">Férovost:</label>
+				<div class="col-sm-8 btn-group">
+					<button ng-repeat="n in [] | range:4" 
+						type="button" class="btn" 
+						ng-class="decider(((n+1)===spirit.fair), 'btn-info', 'btn-default')" 
+						ng-click="select('fair', n+1)">
+						{{n+1}}
+					</button>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="positive">Positivnost:</label>
+				<div class="col-sm-8 btn-group">
+					<button ng-repeat="n in [] | range:4" 
+						type="button" class="btn" 
+						ng-class="decider(((n+1)===spirit.positive), 'btn-info', 'btn-default')" 
+						ng-click="select('positive', n+1)">
+						{{n+1}}
+					</button>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="communication">Komunikace</label>
+				<div class="col-sm-8 btn-group">
+					<button ng-repeat="n in [] | range:4" 
+						type="button" class="btn" 
+						ng-class="decider(((n+1)===spirit.communication), 'btn-info', 'btn-default')" 
+						ng-click="select('communication', n+1)">
+						{{n+1}}
+					</button>
+				</div>
+			</div>
 		</div>
 
 		<div class="form-group">
