--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -14,7 +14,7 @@
 				<li ng-class="getActiveClass('/')"><a href="#/">Hlavní stánka</a></li>
 				<!-- <li ng-show="logged(3)" ng-class="getActiveClass('newTournament')"><a href="#/newTournament">Nový turnaj</a></li> -->
 				<li ng-show="logged(2)" ng-class="getActiveClass('scoring')"><a href="#/scoring">Skórovat</a></li>
-				<li ng-show="logged(1)" ng-class="getActiveClass('spirit')"><a href="#/spirit">Hodnotit spirit</a></li>
+				<li ng-show="logged(1, true)" ng-class="getActiveClass('spirit')"><a href="#/spirit">Hodnotit spirit</a></li>
 				<li ng-class="getActiveClass('scores')"><a href="#/scores">Výsledky</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
