--- a/src/partials/newTournament.html
+++ b/src/partials/newTournament.html
@@ -11,10 +11,11 @@
 		
 		<div class="form-group row">
 			<div class="col-sm-offset-2 col-sm-10">
-				<input class="btn btn-primary" type="submit" ng-click="update(tour)" value="Uložit">
-				<input class="btn btn-secondary" type="button" ng-click="reset()" value="Reset">
+				<input class="btn btn-primary" type="submit" ng-click="update(tour)" value="Vytvořit turnaj">
 			</div>
 		</div>
 	</form>
+
+	<pre>{{ master | json }}</pre>
 
 </div>
