--- a/src/partials/newTournament/matchesPlayoffForm.html
+++ b/src/partials/newTournament/matchesPlayoffForm.html
@@ -1,24 +1,10 @@
 
-<div class="form-group-set" ng-repeat="data in tmpData.groupMatches">
+<div class="form-group-set" ng-repeat="data in tour.playoff">
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="ide{{$index}}">Identifikátor:</label>
 		<div class="col-sm-8">
 			<input class="form-control" type="text" id="ide{{$index}}" name="ide{{$index}}" ng-model="data.ide" placeholder="Identifikátor" required>
-		</div>
-		<div class="col-sm-2 formMsg" ng-messages="newTour['ide'+$index].$error">
-			<div ng-include="ngMessagesFile"></div>
-		</div>
-	</div>
-
-	<div class="form-group row">
-		<label class="form-control-label col-sm-2" for="group{{$index}}">Skupina:</label>
-		<div class="col-sm-8">
-			<select class="form-control" id="group{{$index}}" ng-model="data.group" name="group{{$index}}" required
-				ng-options="$index as group.ide for group in tour.groups | definedValue:'ide'">
-				<option value="">Vyberte skupinu</option>
-				<option value="playoff">Playoff</option>
-			</select>
 		</div>
 		<div class="col-sm-2 formMsg" ng-messages="newTour['ide'+$index].$error">
 			<div ng-include="ngMessagesFile"></div>
@@ -35,7 +21,7 @@
 		</label>
 		<div class="col-sm-8">
 			<select class="form-control" id="homeSeed{{$index}}" ng-model="data.homeSeed" name="homeSeed{{$index}}" required
-				ng-options="team.id as team.name for team in tour.groups[data.group].teams">
+				ng-options="team.id as team.name for team in tour.teams">
 				<option value="">TBA</option>
 			</select>
 		</div>
@@ -54,7 +40,7 @@
 		</label>
 		<div class="col-sm-8">
 			<select class="form-control" id="awaySeed{{$index}}" ng-model="data.awaySeed" name="awaySeed{{$index}}" required
-				ng-options="team.id as team.name for team in tour.groups[data.group].teams"> <!--  | definedValue:'seeding' -->
+				ng-options="team.id as team.name for team in tour.teams"> <!--  | definedValue:'seeding' -->
 				<option value="">TBA</option>
 			</select>
 		</div>
@@ -92,14 +78,20 @@
 		</div>
 	</div>
 
-	<!-- <div class="form-group row">
+	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="winnerStep{{$index}}">Postup vítěze:</label>
-		<div class="col-sm-8">
+		<div class="col-sm-4">
 			<select class="form-control" id="winnerStep{{$index}}" ng-model="data.winnerNextStep" 
 				ng-options="match.ide as getSelectDescForField(match) for match in tour.matches | definedValue:'ide'"
 				ng-validate-next-step="winnerFinalStanding" name="winnerStep{{$index}}">
 				<option value="">Zápas</option>
 			</select>
+		</div>
+		<div class="col-sm-1 text-center formMsg">nebo</div>
+		<div class="col-sm-3">
+			<input type="number" id="winnerStanding{{$index}}" class="form-control" 
+			ng-model="data.winnerFinalStanding" placeholder="Umístění" 
+			ng-validate-final-standing="winnerNextStep" name="winnerStanding{{$index}}">
 		</div>
 		<div class="col-sm-2 formMsg">
 			<div ng-messages="newTour['winnerStep'+$index].$error">
@@ -113,12 +105,18 @@
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="looser{{$index}}">Postup poraženého:</label>
-		<div class="col-sm-8">
+		<div class="col-sm-4">
 			<select class="form-control" id="looserStep{{$index}}" ng-model="data.looserNextStep" name="looser{{$index}}"
 				ng-options="match.ide as getSelectDescForField(match) for match in tour.matches | definedValue:'ide'"
 				ng-validate-next-step="looserFinalStanding" name="looserStep{{$index}}">
 				<option value="">Zápas</option>
 			</select>
+		</div>
+		<div class="col-sm-1 text-center formMsg">nebo</div>
+		<div class="col-sm-3">
+			<input type="number" id="looserStanding{{$index}}" class="form-control" 
+			ng-model="data.looserFinalStanding" placeholder="Umístění"
+			ng-validate-final-standing="looserNextStep" name="looserStanding{{$index}}">
 		</div>
 		<div class="col-sm-2 formMsg">
 			<div ng-messages="newTour['looserStep'+$index].$error">
@@ -128,7 +126,7 @@
 				<div ng-include="ngMessagesFile"></div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="form-group row">
 		<label class="form-control-label col-sm-2" for="description{{$index}}">Popis:</label>
@@ -154,6 +152,6 @@
 
 <div class="form-group row">
 	<div class="col-sm-offset-2 col-sm-10">
-		<button class="btn btn-secondary" ng-click="addGroupMatch()">Přidat zápas</button>
+		<button class="btn btn-secondary" ng-click="addPlayoffMatch()">Přidat zápas</button>
 	</div>
 </div>
