--- a/src/partials/newTournament/tourForm.html
+++ b/src/partials/newTournament/tourForm.html
@@ -69,11 +69,23 @@
 </div>
 
 <div class="form-group row">
-	<label class="form-control-label col-sm-2" for="teams">Počet týmů:</label>
+	<label class="form-control-label col-sm-2" for="teams">Týmy:</label>
 	<div class="col-sm-8">
-		<input class="form-control" type="number" id="teams" name="teams" ng-model="tour.teams" placeholder="Počet týmů" required>
+		<div 
+			isteven-multi-select
+			input-model="teams"
+			output-model="tour.teams"
+			button-label="name"
+			item-label="name"
+			tick-property="ticked"
+			translation="multiple.teams.texts"
+			max-labels="5"
+			max-height="200px"
+			helper-elements="all none filter"
+		>
+		</div>
 	</div>
-	<div class="col-sm-2 formMsg" ng-messages="newTour.teams.$error">
+	<div class="col-sm-2 formMsg" ng-messages="multiple.teams.$validation">
 		<div ng-include="ngMessagesFile"></div>
 	</div>
 </div>
