--- a/src/partials/profile.html
+++ b/src/partials/profile.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 
-		<div class="panel panel-default">
+		<div class="panel panel-default" ng-show="logged(3)">
 			<div class="panel-heading">
 				<div class="row">
 					<div class="col-sm-9 highlight-2">
